completed basic api auth, crud post

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
+    "redis": "^4.2.0",
     "sequelize": "^6.20.1",
     "signale": "^1.4.0",
     "validator": "^13.7.0"
