--- a/env/example.env
+++ b/env/example.env
@@ -7,5 +7,5 @@ SQL_PASSWORD=666869
 SQL_HOST=localhost
 
 REDIS_URL = 'redis://127.0.0.1:6379'
-EX_ACCESS_TOKEN = '1d'
-EX_REFRESH_TOKEN = '1y'
+EX_ACCESS_TOKEN = '1h'
+EX_REFRESH_TOKEN = '1d'
