--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "windows": "SET NODE_ENV=dev&&nodemon index.js",
-    "start": "NODE_ENV=dev nodemon index.js",
-    "demo": "NODE_ENV=demo node index.js",
-    "prod": "NODE_ENV=prod node index.js"
+    "windows": "SET NODE_ENV=development&&nodemon index.js",
+    "start": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node index.js",
+    "production": "NODE_ENV=prod node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -32,6 +35,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "minio": "^7.0.30",
+    "node-fetch": "^3.2.10",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
