add limiter and log file

--- a/env/development.env
+++ b/env/development.env
@@ -14,3 +14,9 @@ MIN_IO_BUCKET='uploads'
 
 SECONDS_WINDOW=10
 ALLOWED_HITS=5
+
+
+ENDPOINT=localhost
+PORT_MIN_IO=9000
+ACCESS_KEY=long
+SECRET_KEY=test1234
