--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
@@ -35,6 +36,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "minio": "^7.0.30",
+    "morgan": "^1.10.0",
     "node-fetch": "^3.2.10",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
